[package]
name = "provable-vm"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.4"
ark-bls12-381 = "0.4"
ark-groth16 = "0.4"
ark-relations = "0.4"
ark-snark = "0.4"
ark-serialize = "0.4"
ark-std = "0.4"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
rand_chacha = "0.3"
rand_core = { version = "0.6", features = ["getrandom"] }
tracing-subscriber = "0.2.25"
tracing = "0.1.40"    # Hex encoding for output files